# kde1-kmorph

./: .directory  CMakeLists.txt  KFileDialog.cpp  KFileDialog.h  KFileDialog.moc  README  TODO  kalpha.cpp  kalpha.h  kmorph-0.1.5.lsm  kmorph.cpp  kmorph.h  kmorph.kdelnk  kmorphwin.cpp  kmorphwin.h  makefile  morph.cpp  morph.h
data/: face1.morph  face1.ppm  face2.morph  face2.ppm
doc/: de_kmorph.html
icons/: dispcolor.xpm  movedest.xpm  movesrc.xpm  select.xpm
po/: de_kmorph.gmo  de_kmorph.po  makefile
